# ProjectA1

./: .env.development  .env.production  .gitignore  CNAME  README.md  changes_made_info.txt  docker-compose.yml  endpoints_links_data_details.txt  index.html  loginPage.html  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tasks.txt  temp.css  temp.html  temp.js  test.py  vite.config.js
Backend/: main.py
Backend/connections/: googleauth.py  mongodb_connect.py
Backend/dependencies/: auth_deps.py
Backend/middleware/: auth_middleware.py
Backend/models/: __init__.py  chat.py  session.py  temp.py  user.py
Backend/routes/: auth_routes.py  user_routes.py
Backend/scripts/: create_indexes.py
Backend/utils/: db_utils.py  error_handlers.py  jwt_utils.py  password_utils.py
Frontend/: home.html  homepage.html  loginPage.html  signup.html
Frontend/config/: config.js
Frontend/pages/: home.html  login.html  signup.html
Frontend/scripts/: associatedChatVcRttVttt.min.js  blinkWEBtagLine.js  chatMenuOptions.js  darkMode.js  darkMode.min.js  disableDeveloperTools.min.js  dragIconsSvg.min.js  getInputTextForModel.js  inputAreaController.js  login.js  loginWdinwoCloseOpen.js  microphone.js  model.VC.min.js  randomLink.min.js  rippleEffect.js  screenSlider.min.js  shareChat.js  showHidePassword.js  showHidePassword.min.js  signup.js  signupLoginCSSAnimation.js  singup.js  temp.js  testConnection.js  websiteInfo.js  websiteLogoRandomColor.js
Frontend/services/: apiService.js
Frontend/stylesheets/: home.css  home.min.css  login.css  (+6 more)
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  config.py  database.py  main.py  pyproject.toml  server.py
frontend/: .env.development  .env.production  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.js
public/: login.html  signup.html
src/: main.js
(+195 files in other folders)
